[package]
name = "danila-client"
version = "0.1.0"
authors = ["Danila <danila.atmakin@auto1.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2.0"

tokio = "0.1"
tokio-io = "0.1"
futures = "0.1.24"
bytes = "0.4"
tokio-timer = "0.2.7"

hyper = "0.12"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.28"

rust_gpiozero = "0.1.0"
clap = "2.32.0"

[build-dependencies]
pkg-config = "^0.3.9"
gcc = "0.3"